--- a/birthday.html
+++ b/birthday.html
@@ -125,7 +125,7 @@
 					<li>Слаженная работа исполнителей за счёт многолетней практики</li>
 				</ul>
 				<h3>В чем «фишка» дуэта ID? Почему Вам понравится кавер группа на день рождения?</h3>
-				<p>Дуэт ID (Ilona&Denis) – уникальная кавер группа, исполняющая не первый год жанр кроссовер. Особенность дуэта вокалистов - живое исполнение сложнейших треков с вставками оперного пения! За плечами вокалистов многолетний опыт, позволяющий с легкостью совмещать современное звучания с классической музыкой и академическим вокалом. На ваш день рождения вы можете заказать магическое звучание, которое приобретают современные треки в исполнении дуэта ID! Вам праздник запомниться всем!<br><br>
+				<p>Дуэт ID (Ilona&Denis) – уникальная кавер группа, исполняющая не первый год жанр кроссовер. Особенность дуэта вокалистов - живое исполнение сложнейших треков со вставками оперного пения! За плечами вокалистов многолетний опыт, позволяющий с легкостью совмещать современное звучания с классической музыкой и академическим вокалом. На ваш день рождения вы можете заказать магическое звучание, которое приобретают современные треки в исполнении дуэта ID! Вам праздник запомниться всем!<br><br>
 				<span>Закажите кавер группу «Дуэт ID» на день рождения и не сомневайтесь, что получите море удовольствия!</span>
 				</p>
 			</div>
