--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 				<div class="promo-content col-2">
 					<h2>DUET ID</h2>
 					<h3>Промо видео</h3>
-					<p>Дуэт ID виртуозно сочетает порой несочетаемое: эстрадный вокал в своих лучших традициях и классическое оперное пение. Необычная и богатая палитра звучания позволяет артистам исполнять разноплановый и даже разножанровый репертуар: от лучших номеров из опер и мюзиклов, произведений в жанре «кросс-овер» до кавер-версий хитов зарубежной и русской поп-музыки. В репертуаре дуэта есть оригинальные песни, сочетающие в себе элементы клубной музыки и оперы.</p>
+					<p>Дуэт ID виртуозно сочетает порой несочетаемое: эстрадный вокал в своих лучших традициях и классическое оперное пение. Необычная и богатая палитра звучания позволяет артистам исполнять разноплановый и даже разножанровый репертуар: от кавер-версий хитов зарубежной и русской поп-музыки, произведений в жанре кросс-овер до лучших номеров из опер и мюзиклов. В репертуаре дуэта есть оригинальные песни, сочетающие в себе элементы клубной музыки и оперы.</p>
 				</div>
 			</div>
 		</article>
@@ -197,7 +197,7 @@
 				<section class="person ilona">
 					<div class="desc col-1">
 						<h3>Илона Красникова</h3>
-						<p> Вокалистка с 11-летним стажем исполнения разноплановых произведений в технике эстардного и академического вокала. Закончила академию им.Гнесиных с отличием. Работала по контракту в вокальных ансамблях Японии на протяжении года. За свою многолетнюю карьеру исполнительницы, стала участлником и победителем многих всероссийских и международных конкурсов. Преподносит каждое произведение с неповторимой грацией и чувством.</p>
+						<p> Исполнительница с 11-летним стажем исполнения разноплановых произведений в технике эстардного и академического вокала. Закончила академию им.Гнесиных с отличием. Работала по контракту в вокальных ансамблях Японии на протяжении года. За свою многолетнюю карьеру исполнительницы, стала лауреатом многих всероссийских и международных конкурсов. Преподносит каждое произведение с неповторимой грацией и чувством.</p>
 						<div class="links">
 							<a href="https://vk.com/id26674254" ><i class="fab fa-vk wow fadeInUp" data-wow-delay=".1s" ></i></a>
 							<a href="https://www.instagram.com/ilonakrasnikova/" ><i class="fab fa-instagram wow fadeInUp" data-wow-delay=".2s"></i></a>
