--- a/new_year.html
+++ b/new_year.html
@@ -125,7 +125,7 @@
 					<li>Отточенная и слаженная работа дуэта, многолетний опыт</li>
 				</ul>
 				<h3>Почему лучшая кавер группа на Новый Год – это дуэт ID? В чем «фишка» дуэта?</h3>
-				<p>Илона и Денис (солисты дуэта ID) – единственная музыкальная группа, исполняющая не первый год жанр кроссовер. Особенность дуэта вокалистов - живое исполнение сложнейших треков с вставками оперного пения! За плечами вокалистов многолетний опыт, позволяющий с легкостью совмещать современное звучания с классической музыкой и академическим вокалом. Новый Год может засиять вновь даже для тех, кто потерял веру в чудеса, услышав современные песни в таком исполнении! Никто не сможет остаться равнодушным!<br><br>
+				<p>Илона и Денис (солисты дуэта ID) – единственная музыкальная группа, исполняющая не первый год жанр кроссовер. Особенность дуэта вокалистов - живое исполнение сложнейших треков со вставками оперного пения! За плечами вокалистов многолетний опыт, позволяющий с легкостью совмещать современное звучания с классической музыкой и академическим вокалом. Новый Год может засиять вновь даже для тех, кто потерял веру в чудеса, услышав современные песни в таком исполнении! Никто не сможет остаться равнодушным!<br><br>
 				<span>Закажите кавер группу «Дуэт ID» на Новый Год, чтобы почувствовать дух праздника и порадовать себя и своих гостей!</span>
 				</p>
 			</div>
