--- a/party.html
+++ b/party.html
@@ -125,7 +125,7 @@
 					<li>Лёгкая и непринуждённая работа «на публику», превосходящая других ведущих</li>
 				</ul>
 				<h3>Кавер группа на праздник - почему стоит заказать прямо сейчас? Что особенного в дуэте ID?</h3>
-				<p>Дуэт ID – уникальная кавер группа, выступающая в жанре кроссовер. Неповторимая «фишка» дуэта - живое исполнение сложнейших треков с вставками оперного пения! За плечами вокалистов многолетний опыт, позволяющий с легкостью совмещать современное звучания с классической музыкой и академическим вокалом. На вашем мероприятии могут быть исполнены стильные, современные песни в новом звучании! Искусство придёт на ваш праздник!<br><br>
+				<p>Дуэт ID – уникальная кавер группа, выступающая в жанре кроссовер. Неповторимая «фишка» дуэта - живое исполнение сложнейших треков со вставками оперного пения! За плечами вокалистов многолетний опыт, позволяющий с легкостью совмещать современное звучания с классической музыкой и академическим вокалом. На вашем мероприятии могут быть исполнены стильные, современные песни в новом звучании! Искусство придёт на ваш праздник!<br><br>
 				<span>Приблизьтесь к прекрасному, закажите кавер группу «Дуэт ID» на праздник!</span>
 				</p>
 			</div>
