--- a/anniversary.html
+++ b/anniversary.html
@@ -99,33 +99,33 @@
 				c5.552-5.564,12.834-8.34,20.116-8.34c7.27,0,14.552,2.776,20.105,8.34l139.514,139.514l139.196-139.196
 				c5.564-5.552,12.834-8.34,20.116-8.34c7.27,0,14.552,2.788,20.105,8.34c11.116,11.105,11.116,29.104,0,40.22L228.294-151.753z"/></g></g></g></svg>
 
-			<legend>Заполните форму и мы свяжемся с вами в ближайшее время</legend>
+			<legend>Заполните форму и мы свяжемся с Вами в ближайшее время</legend>
 			<div class="input_style"><label>Ваше имя:</label><input type="text" name="name" placeholder="Иван" pattern="[а-яА-Я -]{1,40}" required></div>
 			<div class="input_style"><label>Ваш телефон:</label><input type="text" id="phone" name="phone" placeholder="(495) 000-0000" required></div>
 			<input type="submit" name="send" value="Отправить">
-			<p>Нажимая на кнопку, вы даете согласие на обработку <a href="#">персональных данных</a></p>
+			<p>Нажимая на кнопку, Вы даете согласие на обработку <a href="#">персональных данных</a></p>
 		</form>
 	</div>
 		<article class="service">
 			<div class="container">
-				<h2>Нужна кавер группа на юбилей? «Дуэт ID» - идеально подходит вашему мероприятию!</h2>
+				<h2>Нужна кавер группа на юбилей? «Дуэт ID» идеально подходит Вашему мероприятию!</h2>
 				<p>Каждый день рождения чем-то запоминающийся и важный, но юбилей – куда более масштабное мероприятие, требующее наиболее внимательного подхода. Родные, друзья, коллеги – те, кто окружает вас в этот памятный день. Что сделает вечер поистине идеальным для всех и в особенности для юбиляра? Запоминающийся подарок и удовольствие для всех присутствующих – кавер группа на юбилей. Пригласив музыкантов на юбилей, вы гарантируете себе музыку в её лучшем качестве и исполнении, а также бурю оваций и прекрасные воспоминания о музыкальном сопровождении вечера! <br><br>
 				<span>Только кавер группа на юбилей сможет найти подход ко всем гостям, вне зависимости от возраста и профессии, а также вживую исполнить любимые песни!</span>
 				</p>
 				<h3>Почему мы?</h3>
-				<p>Кавер группа «Дуэт ID» - это высококлассные исполнители российской и зарубежной музыки, ставящие для себя приоритетом ВАШ праздник и ВАШИ желание.</p>
+				<p>Кавер группа «Дуэт ID» - это высококлассные исполнители российской и зарубежной музыки, ставящие для себя приоритетом ВАШ праздник и ВАШИ желания.</p>
 				<ul>
 					<li>Работа с публикой слаженная и непринужденная, не похожая на тамаду</li>
 					<li>Музыка любых жанров, а также в стиле «кроссовер»</li>
 					<li>Песни на подходящую тематику, а также любимая песня юбиляра</li>
 					<li>Собственная музыкальная аппаратура (доставка по договоренности)</li>
-					<li>Исполнители легко находят подход к вашей аудитории</li>
+					<li>Исполнители легко находят подход к Вашей аудитории</li>
 					<li>Оба вокалиста имеют профессиональное образование, закончили академию им.Гнесиных</li>
 					<li>Невысокая цена за исполнителей относительно других профессионалов</li>
 					<li>Гладкая и отполированная работа дуэта после многих лет практики</li>
 				</ul>
 				<h3>Почему дуэт ID – это лучшая кавер группа на юбилей? В чем «фишка» дуэта? </h3>
-				<p>Дуэт ID – единственная кавер группа, не первый год работающая в стиле кроссовер. Особенность дуэта вокалистов - живое исполнение сложнейших треков с элементами оперного пения! За плечами певцов многолетний опыт музыкальных выступлений, позволяющий с легкостью совмещать современные треки с классической музыкой и академическим вокалом. На ваш юбилей вы можете заказать потрясающее звучание, которое приобретают любимые композиции в исполнении Дуэта ID! Вас поразят голоса исполнителей!<br><br>
+				<p>Дуэт ID – единственная кавер группа, не первый год работающая в стиле кроссовер. Особенность дуэта вокалистов - живое исполнение сложнейших треков с элементами оперного пения! За плечами певцов многолетний опыт музыкальных выступлений, позволяющий с легкостью совмещать современные треки с классической музыкой и академическим вокалом. На Ваш юбилей Вы можете заказать потрясающее звучание, которое приобретают любимые композиции в исполнении Дуэта ID! Вас поразят голоса исполнителей!<br><br>
 				<span>Закажите кавер группу «Дуэт ID» на юбилей, чтобы Вы и Ваши гости влюбились в музыку как в первый раз!</span>
 				</p>
 			</div>
@@ -146,8 +146,11 @@
 					<h2>Заполните форму</h2>
 					<h3>и получите персональную скидку</h3>
 					<p>
-						Для того, чтобы любой праздник переполнился красками и оставил за собой шлейф из воспоминаний, необходима тщательная подготовка события. На помощь спешит кавер группа на праздник в Москве "Дуэт ID". Наша оригинальная программа включает в себя разноплановый и даже разножанровый репертуар: От лучших номеров из опер и мюзиклов, произведений в жанре "кросс-овер" до кавер-версий хитов зарубежной и российской поп-музыки. Мы поможем сделать ваше событие идеальным.<br><br><span id="upper"> Спешите отправить заявку сейчас, чтобы получить индивидуальную скидку при заказе с сайта!</span>
+						Для того, чтобы любой праздник переполнился красками и оставил за собой шлейф из воспоминаний, необходима тщательная подготовка события. На помощь спешит кавер группа на праздник в Москве "Дуэт ID". Наша оригинальная программа включает в себя разноплановый и даже разножанровый репертуар: от кавер-версий хитов зарубежной и русской поп-музыки, произведений в жанре кросс-овер до лучших номеров из опер и мюзиклов. Мы поможем сделать Ваше событие идеальным.
 					</p>
+					<span>
+						Спешите отправить заявку сейчас, чтобы получить индивидуальную скидку при заказе с сайта!
+					</span>
 				</div>
 
 				<div class="col-2 form wow slideInRight container1">
