--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
 				c5.552-5.564,12.834-8.34,20.116-8.34c7.27,0,14.552,2.776,20.105,8.34l139.514,139.514l139.196-139.196
 				c5.564-5.552,12.834-8.34,20.116-8.34c7.27,0,14.552,2.788,20.105,8.34c11.116,11.105,11.116,29.104,0,40.22L228.294-151.753z"/></g></g></g></svg>
 
-			<legend>Заполните форму и мы свяжемся с вами в ближайшее время</legend>
+			<legend>Заполните форму и мы свяжемся с Вами в ближайшее время</legend>
 			<div class="input_style"><label>Ваше имя:</label><input type="text" name="name" placeholder="Иван" pattern="[а-яА-Я -]{1,40}" required></div>
 			<div class="input_style"><label>Ваш телефон:</label><input type="text" id="phone" name="phone" placeholder="(495) 000-0000" required></div>
 			<input type="submit" name="send" value="Отправить">
-			<p>Нажимая на кнопку, вы даете согласие на обработку <a href="#">персональных данных</a></p>
+			<p>Нажимая на кнопку, Вы даете согласие на обработку <a href="#">персональных данных</a></p>
 		</form>
 	</div>
 		<article class="promo">
@@ -149,7 +149,7 @@
 			<div class="container">
 				<div class="services-title col-1">
 					<h2>Идеальное звучание для значимых событий</h2>
-					<p>Стильный дуэт с потрясающим вокалом подарит незабываемые впечатления и украсит ваше мероприятие! Заказав кавер группу на ваше мероприятие вы гарантируйте себе музыкальное сопровождение, которое обогатит ваш праздник и останется в памяти.</p>
+					<p>Стильный дуэт с потрясающим вокалом подарит незабываемые впечатления и украсит Ваше мероприятие! Заказав кавер группу на Ваше мероприятие Вы гарантируйте себе музыкальное сопровождение, которое обогатит Ваш праздник и останется в памяти.</p>
 				</div>
 				<div class="services-content col-2">
 					<a href="wedding.html" class="services-item wow fadeInUp">
@@ -197,11 +197,10 @@
 				<section class="person ilona">
 					<div class="desc col-1">
 						<h3>Илона Красникова</h3>
-						<p> Исполнительница с 11-летним стажем исполнения разноплановых произведений в технике эстардного и академического вокала. Закончила академию им.Гнесиных с отличием. Работала по контракту в вокальных ансамблях Японии на протяжении года. За свою многолетнюю карьеру исполнительницы, стала лауреатом многих всероссийских и международных конкурсов. Преподносит каждое произведение с неповторимой грацией и чувством.</p>
+						<p> Исполнительница с 11-летним стажем исполнения разноплановых произведений в технике эстрадного и академического вокала. Закончила академию им.Гнесиных с отличием. Работала по контракту в вокальных ансамблях Японии на протяжении года. За свою многолетнюю карьеру исполнительницы, стала лауреатом многих всероссийских и международных конкурсов. Преподносит каждое произведение с неповторимой грацией и чувством.</p>
 						<div class="links">
 							<a href="https://vk.com/id26674254" ><i class="fab fa-vk wow fadeInUp" data-wow-delay=".1s" ></i></a>
 							<a href="https://www.instagram.com/ilonakrasnikova/" ><i class="fab fa-instagram wow fadeInUp" data-wow-delay=".2s"></i></a>
-							<a href="#" ><i class="fab fa-facebook-square wow fadeInUp" data-wow-delay=".3s"></i></a>
 						</div>
 					</div>
 					<div class="photo col-2 wow slideInRight">
@@ -223,7 +222,7 @@
 		<article class="info">
 			<div class="container">
 				<h2>Почему <span>не</span> мы?</h2>
-				<h3>Вот несколько причин, почему вам не стоит выбирать нас:</h3>
+				<h3>Вот несколько причин, почему Вам не стоит выбирать нас:</h3>
 				<div class="items wow slideInRight">
 					<div class="item ">
 						<div class="col-1 img">
@@ -232,7 +231,7 @@
 						<div class="col-2 desc">
 							<h4>Яркость</h4>
 							<p>
-							Вы хотите получить скудное звучание и пение «мимо нот»? Вас не интересует богатая палитра красок голоса и стильный внешний вид? Тогда вам не стоит выбирать нас! Ведь Дуэт ID - это не только высокопрофессиональные исполнители, но и  буря жизненной энергии, заряжающая ваш праздник и позволяющая гостям унести частичку тепла домой!
+							Вы хотите получить скудное звучание и пение «мимо нот»? Вас не интересует богатая палитра красок голоса и стильный внешний вид? Тогда Вам не стоит выбирать нас! Ведь Дуэт ID - это не только высокопрофессиональные исполнители, но и  буря жизненной энергии, заряжающая Ваш праздник и позволяющая гостям унести частичку тепла домой!
 							</p>
 						</div>
 					</div>
@@ -240,7 +239,7 @@
 						<div class="col-1 desc">
 							<h4>Кроссовер</h4>
 							<p>
-							Не ждете услышать на своем празднике нечто поистине уникальное? Тогда закройте вкладку, ведь именно этим и примечателен Дуэт ID - безукоризненный кроссовер жанров академического (оперного) вокала с современной музыкой, стилем и движениями, а также мириада песен и номеров в потрясающем исполнении. В репертуре найдется что-то для каждого. Готовы ли вы упустить это?
+							Не ждете услышать на своем празднике нечто поистине уникальное? Тогда закройте вкладку, ведь именно этим и примечателен Дуэт ID - безукоризненный кроссовер жанров академического (оперного) вокала с современной музыкой, стилем и движениями, а также мириада песен и номеров в потрясающем исполнении. В репертуре найдется что-то для каждого. Готовы ли Вы упустить это?
 							</p>
 						</div>
 						<div class="col-2 img">
@@ -256,7 +255,7 @@
 						<div class="col-2 desc">
 							<h4>СТОИМОСТЬ</h4>
 							<p>
-							Мечтаете переплатить за музыкальное сопровождение? Выбираете звук по стоимости исполнения? Возможно вам повезет с выбором, но это будет не Дуэт ID. Дуэт ID - исполнители высочайшего класса с ценами, которые можно позволить себе не один раз. Они исполнят вам песни и даже арии с легкостью, грацией и стоимостью, которых не увидеть нигде, ведь искусство должно быть доступно всем!
+							Мечтаете переплатить за музыкальное сопровождение? Выбираете звук по стоимости исполнения? Возможно, Вы даже найдете относительно неплохих музыкантов, но это будет не Дуэт ID. Дуэт ID - исполнители высочайшего класса с ценами, которые можно позволить себе не один раз. Они исполнят Вам песни и даже арии с легкостью, грацией и стоимостью, которых не увидеть нигде, ведь искусство должно быть доступно всем!
 							</p>
 						</div>
 
@@ -293,7 +292,7 @@
 									<img src="img/anna.jpg">
 								</div>
 								<div class="text">
-									<p class="content">"Дуэт ID - это профессиональные и очень крутые вокалисты, которые исполняют разнообразный репертуар. Работают с полной отдачей на все 100! Гармоничные, талантливые, с блестящим образованием артисты украсят ваш праздник и создадут невероятную атмосферу! Ребята выступают на высшем уровне не только как вокалисты, но и как сценаристы и ведущие мероприятий. Выбирайте профессионалов!"</p>
+									<p class="content">"Дуэт ID - это профессиональные и очень крутые вокалисты, которые исполняют разнообразный репертуар. Работают с полной отдачей на все 100! Гармоничные, талантливые, с блестящим образованием артисты украсят Ваш праздник и создадут невероятную атмосферу! Ребята выступают на высшем уровне не только как вокалисты, но и как сценаристы и ведущие мероприятий. Выбирайте профессионалов!"</p>
 									<p class="name">Анна Каткова</p>
 									<p class="date">08.02.2019</p>
 								</div>
@@ -356,7 +355,7 @@
 					<h2>Заполите форму</h2>
 					<h3>и получите персональную скидку</h3>
 					<p>
-						Для того, чтобы любой праздник переполнился красками и оставил за собой шлейф из воспоминаний, необходима тщательная подготовка события. На помощь спешит кавер группа на праздник в Москве "Дуэт ID". Наша оригинальная программа включает в себя разноплановый и даже разножанровый репертуар: От лучших номеров из опер и мюзиклов, произведений в жанре "кросс-овер" до кавер-версий хитов зарубежной и российской поп-музыки. Мы поможем сделать ваше событие идеальным.
+						Для того, чтобы любой праздник переполнился красками и оставил за собой шлейф из воспоминаний, необходима тщательная подготовка события. На помощь спешит кавер группа на праздник в Москве "Дуэт ID". Наша оригинальная программа включает в себя разноплановый и даже разножанровый репертуар: от кавер-версий хитов зарубежной и русской поп-музыки, произведений в жанре кросс-овер до лучших номеров из опер и мюзиклов. Мы поможем сделать Ваше событие идеальным.
 					</p>
 					<span>
 						Спешите отправить заявку сейчас, чтобы получить индивидуальную скидку при заказе с сайта!
