--- a/new_year.html
+++ b/new_year.html
@@ -83,7 +83,7 @@
 		</div>
 		<div class="slide">
 			<h1>Дуэт ID</h1>
-			<h3>Музыкальный, яркий, зажигательный дуэт на ваши мероприятия в Москве и МО.</h3>
+			<h3>Музыкальный, яркий, зажигательный дуэт на Ваши мероприятия в Москве и МО.</h3>
 			<a class="btn" id="callMeBack" href="#">Заказать звонок</a>
 		</div>
 		<div class = "white left"></div>
@@ -99,21 +99,21 @@
 				c5.552-5.564,12.834-8.34,20.116-8.34c7.27,0,14.552,2.776,20.105,8.34l139.514,139.514l139.196-139.196
 				c5.564-5.552,12.834-8.34,20.116-8.34c7.27,0,14.552,2.788,20.105,8.34c11.116,11.105,11.116,29.104,0,40.22L228.294-151.753z"/></g></g></g></svg>
 
-			<legend>Заполните форму и мы свяжемся с вами в ближайшее время</legend>
+			<legend>Заполните форму и мы свяжемся с Вами в ближайшее время</legend>
 			<div class="input_style"><label>Ваше имя:</label><input type="text" name="name" placeholder="Иван" pattern="[а-яА-Я -]{1,40}" required></div>
 			<div class="input_style"><label>Ваш телефон:</label><input type="text" id="phone" name="phone" placeholder="(495) 000-0000" required></div>
 			<input type="submit" name="send" value="Отправить">
-			<p>Нажимая на кнопку, вы даете согласие на обработку <a href="#">персональных данных</a></p>
+			<p>Нажимая на кнопку, Вы даете согласие на обработку <a href="#">персональных данных</a></p>
 		</form>
 	</div>
 		<article class="service">
 			<div class="container">
 				<h2>Если сезон ёлок уже близко, а у вас нет музыкального коллектива, кавер группа на Новый Год «Дуэт ID» спасет положение!</h2>
-				<p>Волшебную зимнюю сказку ждут все, от мала до велика, люди всех профессий и городов. Кто-то встречает Новый Год дома, в кругу семьи, кто-то в шумной компании на вечеринке, а кто-то ждёт того самого не забываемого новогоднего корпоратива. Чем же запомнится очередной праздник? Неожиданным и приятным пополнением ежегодных традиций, может стать заказ кавер группы на Новый Год. Музыкальный коллектив создаст идеальную атмосферу для танцев, веселья, обмена подарками, а также подарит множество улыбок, которые зададут тон всему наступающему году! <br><br>
-				<span>Лучшая кавер группа на Новый Год в Москве и МО – это дуэт ID, который обладает обширным репертуаром новогодних песен, сможет найти подход ко всем гостям, в независимости от возраста и профессии и подарит вам долгожданное музыкальное чудо!</span>
+				<p>Волшебную зимнюю сказку ждут все: от мала до велика, люди всех профессий и городов. Кто-то встречает Новый Год дома, в кругу семьи, кто-то в шумной компании на вечеринке, а кто-то ждёт того самого незабываемого новогоднего корпоратива. Чем же запомнится очередной праздник? Неожиданным и приятным пополнением ежегодных традиций, может стать заказ кавер группы на Новый Год. Музыкальный коллектив создаст идеальную атмосферу для танцев, веселья, обмена подарками, а также подарит множество улыбок, которые зададут тон всему наступающему году! <br><br>
+				<span>Лучшая кавер группа на Новый Год в Москве и МО – это Дуэт ID, который обладает обширным репертуаром новогодних песен, сможет найти подход ко всем гостям, в независимости от возраста и профессии и подарит Вам долгожданное музыкальное чудо!</span>
 				</p>
 				<h3>Почему мы?</h3>
-				<p>Кавер группа «Дуэт ID» - это высококлассные исполнители российской и зарубежной музыки, ставящие для себя приоритетом ВАШ праздник и ВАШИ желание.</p>
+				<p>Кавер группа «Дуэт ID» - это высококлассные исполнители российской и зарубежной музыки, ставящие для себя приоритетом ВАШ праздник и ВАШИ желания.</p>
 				<ul>
 					<li>Новогодние песни любых жанров, а также элементы стиля «кроссовер»</li>
 					<li>Легкая и не наигранная работа с публикой, не похожая на тамаду</li>
@@ -125,7 +125,7 @@
 					<li>Отточенная и слаженная работа дуэта, многолетний опыт</li>
 				</ul>
 				<h3>Почему лучшая кавер группа на Новый Год – это дуэт ID? В чем «фишка» дуэта?</h3>
-				<p>Илона и Денис (солисты дуэта ID) – единственная музыкальная группа, исполняющая не первый год жанр кроссовер. Особенность дуэта вокалистов - живое исполнение сложнейших треков со вставками оперного пения! За плечами вокалистов многолетний опыт, позволяющий с легкостью совмещать современное звучания с классической музыкой и академическим вокалом. Новый Год может засиять вновь даже для тех, кто потерял веру в чудеса, услышав современные песни в таком исполнении! Никто не сможет остаться равнодушным!<br><br>
+				<p>Дуэт ID – единственная музыкальная группа, исполняющая не первый год жанр кроссовер. Особенность дуэта вокалистов - живое исполнение сложнейших треков со вставками оперного пения! За плечами вокалистов многолетний опыт, позволяющий с легкостью совмещать современное звучание с классической музыкой и академическим вокалом. Новый Год может засиять вновь даже для тех, кто потерял веру в чудеса, услышав современные песни в таком исполнении! Никто не сможет остаться равнодушным!<br><br>
 				<span>Закажите кавер группу «Дуэт ID» на Новый Год, чтобы почувствовать дух праздника и порадовать себя и своих гостей!</span>
 				</p>
 			</div>
@@ -146,8 +146,11 @@
 					<h2>Заполните форму</h2>
 					<h3>и получите персональную скидку</h3>
 					<p>
-						Для того, чтобы любой праздник переполнился красками и оставил за собой шлейф из воспоминаний, необходима тщательная подготовка события. На помощь спешит кавер группа на праздник в Москве "Дуэт ID". Наша оригинальная программа включает в себя разноплановый и даже разножанровый репертуар: От лучших номеров из опер и мюзиклов, произведений в жанре "кросс-овер" до кавер-версий хитов зарубежной и российской поп-музыки. Мы поможем сделать ваше событие идеальным.<br><br><span id="upper"> Спешите отправить заявку сейчас, чтобы получить индивидуальную скидку при заказе с сайта!</span>
+						Для того, чтобы любой праздник переполнился красками и оставил за собой шлейф из воспоминаний, необходима тщательная подготовка события. На помощь спешит кавер группа на праздник в Москве "Дуэт ID". Наша оригинальная программа включает в себя разноплановый и даже разножанровый репертуар: от кавер-версий хитов зарубежной и русской поп-музыки, произведений в жанре кросс-овер до лучших номеров из опер и мюзиклов. Мы поможем сделать ваше событие идеальным.
 					</p>
+					<span>
+						Спешите отправить заявку сейчас, чтобы получить индивидуальную скидку при заказе с сайта!
+					</span>
 				</div>
 
 				<div class="col-2 form wow slideInRight container1">
