--- a/orgs.html
+++ b/orgs.html
@@ -135,8 +135,11 @@
 					<h2>Заполните форму</h2>
 					<h3>и получите персональную скидку</h3>
 					<p>
-						Для того, чтобы любой праздник переполнился красками и оставил за собой шлейф из воспоминаний, необходима тщательная подготовка события. На помощь спешит кавер группа на праздник в Москве "Дуэт ID". Наша оригинальная программа включает в себя разноплановый и даже разножанровый репертуар: От лучших номеров из опер и мюзиклов, произведений в жанре "кросс-овер" до кавер-версий хитов зарубежной и российской поп-музыки. Мы поможем сделать ваше событие идеальным.<br><br><span id="upper"> Спешите отправить заявку сейчас, чтобы получить индивидуальную скидку при заказе с сайта!</span>
+						Для того, чтобы любой праздник переполнился красками и оставил за собой шлейф из воспоминаний, необходима тщательная подготовка события. На помощь спешит кавер группа на праздник в Москве "Дуэт ID". Наша оригинальная программа включает в себя разноплановый и даже разножанровый репертуар: от кавер-версий хитов зарубежной и русской поп-музыки, произведений в жанре кросс-овер до лучших номеров из опер и мюзиклов. Мы поможем сделать ваше событие идеальным.
 					</p>
+					<span>
+						Спешите отправить заявку сейчас, чтобы получить индивидуальную скидку при заказе с сайта!
+					</span>
 				</div>
 
 				<div class="col-2 form wow slideInRight container1">
