--- a/wedding.html
+++ b/wedding.html
@@ -83,7 +83,7 @@
 		</div>
 		<div class="slide">
 			<h1>Дуэт ID</h1>
-			<h3>Музыкальный, яркий, зажигательный дуэт на ваши мероприятия в Москве и МО.</h3>
+			<h3>Музыкальный, яркий, зажигательный дуэт на Ваши мероприятия в Москве и МО.</h3>
 			<a class="btn" id="callMeBack" href="#">Заказать звонок</a>
 		</div>
 		<div class = "white left"></div>
@@ -99,25 +99,25 @@
 				c5.552-5.564,12.834-8.34,20.116-8.34c7.27,0,14.552,2.776,20.105,8.34l139.514,139.514l139.196-139.196
 				c5.564-5.552,12.834-8.34,20.116-8.34c7.27,0,14.552,2.788,20.105,8.34c11.116,11.105,11.116,29.104,0,40.22L228.294-151.753z"/></g></g></g></svg>
 
-			<legend>Заполните форму и мы свяжемся с вами в ближайшее время</legend>
+			<legend>Заполните форму и мы свяжемся с Вами в ближайшее время</legend>
 			<div class="input_style"><label>Ваше имя:</label><input type="text" name="name" placeholder="Иван" pattern="[а-яА-Я -]{1,40}" required></div>
 			<div class="input_style"><label>Ваш телефон:</label><input type="text" id="phone" name="phone" placeholder="(495) 000-0000" required></div>
 			<input type="submit" name="send" value="Отправить">
-			<p>Нажимая на кнопку, вы даете согласие на обработку <a href="#">персональных данных</a></p>
+			<p>Нажимая на кнопку, Вы даете согласие на обработку <a href="#">персональных данных</a></p>
 		</form>
 	</div>
 		<article class="service">
 			<div class="container">
-				<h2>Кавер группа на свадьбу – это дуэт ID</h2>
-				<p>Зачем нужна кавер группа на свадьбу? Свадьба – это событие, которое не может обойтись без музыки. И именно живое звучание привносит неповторимые впечатления от данного события. Если подобрать кавер группу на свадьбу, не имеющую богатого звучания и своеобразного стиля исполнения – гости и молодожены могут лишиться поистине незабываемого выступления! <br><br>
-				<span>Дуэт ID – это кавер группа на свадьбу в Москве, готовая подарить вам уникальное мероприятие! С нами будут зажигать люди всех возрастов!</span>
+				<h2>Кавер группа на свадьбу – это Дуэт ID</h2>
+				<p>Зачем нужна кавер группа на свадьбу? Свадьба – это событие, которое не может обойтись без музыки. И именно живое звучание привносит неповторимые впечатления от данного события. Если подобрать кавер группу на свадьбу, не имеющую богатого звучания и своеобразного стиля исполнения, гости и молодожены могут лишиться поистине незабываемого выступления! <br><br>
+				<span>Дуэт ID – это кавер группа на свадьбу в Москве, готовая подарить Вам уникальное мероприятие! С нами будут зажигать люди всех возрастов!</span>
 				</p>
 				<h3>Почему мы?</h3>
-				<p>Кавер группа «Дуэт ID» - это высококлассные исполнители российской и зарубежной музыки, ставящие для себя приоритетом ВАШ праздник и ВАШИ желание.</p>
+				<p>Кавер группа «Дуэт ID» - это высококлассные исполнители российской и зарубежной музыки, ставящие для себя приоритетом ВАШ праздник и ВАШИ желания.</p>
 				<ul>
 					<li>Оба вокалиста имеют профессиональное образование, закончили академию им.Гнесиных</li>
 					<li>Обширный репертуар, совмещающий множество стилей, а также песни «кроссовер»</li>
-					<li>Подбор песен под ваши предпочтения, включая любимую песню молодых</li>
+					<li>Подбор песен под Ваши предпочтения, включая любимую песню молодых</li>
 					<li>Стоимость выступления ниже, чем у конкурентов</li>
 					<li>Многолетний опыт исполнителей</li>
 					<li>Профессиональная и ненавязчивая работа со зрителями</li>
@@ -145,8 +145,11 @@
 					<h2>Заполните форму</h2>
 					<h3>и получите персональную скидку</h3>
 					<p>
-						Для того, чтобы любой праздник переполнился красками и оставил за собой шлейф из воспоминаний, необходима тщательная подготовка события. На помощь спешит кавер группа на праздник в Москве "Дуэт ID". Наша оригинальная программа включает в себя разноплановый и даже разножанровый репертуар: От лучших номеров из опер и мюзиклов, произведений в жанре "кросс-овер" до кавер-версий хитов зарубежной и российской поп-музыки. Мы поможем сделать ваше событие идеальным.<br><br><span id="upper"> Спешите отправить заявку сейчас, чтобы получить индивидуальную скидку при заказе с сайта!</span>
+						Для того, чтобы любой праздник переполнился красками и оставил за собой шлейф из воспоминаний, необходима тщательная подготовка события. На помощь спешит кавер группа на праздник в Москве "Дуэт ID". Наша оригинальная программа включает в себя разноплановый и даже разножанровый репертуар: от кавер-версий хитов зарубежной и русской поп-музыки, произведений в жанре кросс-овер до лучших номеров из опер и мюзиклов. Мы поможем сделать Ваше событие идеальным.
 					</p>
+					<span>
+						Спешите отправить заявку сейчас, чтобы получить индивидуальную скидку при заказе с сайта!
+					</span>
 				</div>
 
 				<div class="col-2 form wow slideInRight container1">
