--- a/birthday.html
+++ b/birthday.html
@@ -83,7 +83,7 @@
 		</div>
 		<div class="slide">
 			<h1>Дуэт ID</h1>
-			<h3>Музыкальный, яркий, зажигательный дуэт на ваши мероприятия в Москве и МО.</h3>
+			<h3>Музыкальный, яркий, зажигательный дуэт на Ваши мероприятия в Москве и МО.</h3>
 			<a class="btn" id="callMeBack" href="#">Заказать звонок</a>
 		</div>
 		<div class = "white left"></div>
@@ -99,23 +99,23 @@
 				c5.552-5.564,12.834-8.34,20.116-8.34c7.27,0,14.552,2.776,20.105,8.34l139.514,139.514l139.196-139.196
 				c5.564-5.552,12.834-8.34,20.116-8.34c7.27,0,14.552,2.788,20.105,8.34c11.116,11.105,11.116,29.104,0,40.22L228.294-151.753z"/></g></g></g></svg>
 
-			<legend>Заполните форму и мы свяжемся с вами в ближайшее время</legend>
+			<legend>Заполните форму и мы свяжемся с Вами в ближайшее время</legend>
 			<div class="input_style"><label>Ваше имя:</label><input type="text" name="name" placeholder="Иван" pattern="[а-яА-Я -]{1,40}" required></div>
 			<div class="input_style"><label>Ваш телефон:</label><input type="text" id="phone" name="phone" placeholder="(495) 000-0000" required></div>
 			<input type="submit" name="send" value="Отправить">
-			<p>Нажимая на кнопку, вы даете согласие на обработку <a href="#">персональных данных</a></p>
+			<p>Нажимая на кнопку, Вы даете согласие на обработку <a href="#">персональных данных</a></p>
 		</form>
 	</div>
 		<article class="service">
 			<div class="container">
-				<h2>Живете в Москве и МО? Кавер группа на день рождения «Дуэт ID» - это то, что вы искали!</h2>
-				<p>День рождения – это ежегодное событие, объединяющее на один вечер всех близких, родных и друзей с виновником торжества. Невероятно приятно видеть вокруг себя счастливые лица, улыбки, слышать поздравления от дорогих людей. Если Вы хотите сделать особенно запоминающийся подарок или порадовать самого себя, то Вам идеально подходит кавер группа на день рождения! Пригласив кавер группу дуэт ID, вы обеспечите себя и окружающих отменным праздником, где будут звучать любимые именинником песни, а всем зрителям будет тяжело удержаться от танца! <br><br>
-				<span>Кавер группа на день рождения как подарок и развлечение? Это идеальное описание для дуэта ID и их зажигательных выступлений!</span>
+				<h2>Живете в Москве и МО? Кавер группа на день рождения «Дуэт ID» - это то, что Вы искали!</h2>
+				<p>День рождения – это ежегодное событие, объединяющее на один вечер всех близких, родных и друзей с виновником торжества. Невероятно приятно видеть вокруг себя счастливые лица, улыбки, слышать поздравления от дорогих людей. Если Вы хотите сделать особенно запоминающийся подарок или порадовать самого себя, то Вам идеально подходит кавер группа на день рождения! Пригласив кавер группу Дуэт ID, Вы обеспечите себя и окружающих отменным праздником, где будут звучать любимые именинником песни, а всем зрителям будет тяжело удержаться от танца! <br><br>
+				<span>Кавер группа на день рождения как подарок и развлечение? Это идеальное описание для Дуэта ID и их зажигательных выступлений!</span>
 				</p>
 				<h3>Почему мы?</h3>
-				<p>Кавер группа «Дуэт ID» - это высококлассные исполнители российской и зарубежной музыки, ставящие для себя приоритетом ВАШ праздник и ВАШИ желание.</p>
+				<p>Кавер группа «Дуэт ID» - это высококлассные исполнители российской и зарубежной музыки, ставящие для себя приоритетом ВАШ праздник и ВАШИ желания.</p>
 				<ul>
-					<li>Песни на ваш выбор, а также любая песня по заказу именинника</li>
+					<li>Песни на Ваш выбор, а также любая песня по заказу именинника</li>
 					<li>Высокопрофессиональная работа на публику, не напоминающая «тамаду»</li>
 					<li>Исполнение песен в любых стилях, а также «вишенка на торте» - жанр кроссовер</li>
 					<li>Доставка собственной музыкальной аппаратуры - узнавайте по телефону</li>
@@ -124,8 +124,8 @@
 					<li>Приемлемая цена музыкантов по сравнению с другими профессионалами</li>
 					<li>Слаженная работа исполнителей за счёт многолетней практики</li>
 				</ul>
-				<h3>В чем «фишка» дуэта ID? Почему Вам понравится кавер группа на день рождения?</h3>
-				<p>Дуэт ID (Ilona&Denis) – уникальная кавер группа, исполняющая не первый год жанр кроссовер. Особенность дуэта вокалистов - живое исполнение сложнейших треков со вставками оперного пения! За плечами вокалистов многолетний опыт, позволяющий с легкостью совмещать современное звучания с классической музыкой и академическим вокалом. На ваш день рождения вы можете заказать магическое звучание, которое приобретают современные треки в исполнении дуэта ID! Вам праздник запомниться всем!<br><br>
+				<h3>В чем «фишка» Дуэта ID? Почему Вам понравится кавер группа на день рождения?</h3>
+				<p>Дуэт ID – уникальная кавер группа, исполняющая не первый год жанр кроссовер. Особенность дуэта вокалистов - живое исполнение сложнейших треков со вставками оперного пения! За плечами вокалистов многолетний опыт, позволяющий с легкостью совмещать современное звучание с классической музыкой и академическим вокалом. На Ваш день рождения Вы можете заказать магическое звучание, которое приобретают современные треки в исполнении Дуэта ID! Ваш праздник запомнится всем!<br><br>
 				<span>Закажите кавер группу «Дуэт ID» на день рождения и не сомневайтесь, что получите море удовольствия!</span>
 				</p>
 			</div>
@@ -146,8 +146,11 @@
 					<h2>Заполните форму</h2>
 					<h3>и получите персональную скидку</h3>
 					<p>
-						Для того, чтобы любой праздник переполнился красками и оставил за собой шлейф из воспоминаний, необходима тщательная подготовка события. На помощь спешит кавер группа на праздник в Москве "Дуэт ID". Наша оригинальная программа включает в себя разноплановый и даже разножанровый репертуар: От лучших номеров из опер и мюзиклов, произведений в жанре "кросс-овер" до кавер-версий хитов зарубежной и российской поп-музыки. Мы поможем сделать ваше событие идеальным.<br><br><span id="upper"> Спешите отправить заявку сейчас, чтобы получить индивидуальную скидку при заказе с сайта!</span>
+						Для того, чтобы любой праздник переполнился красками и оставил за собой шлейф из воспоминаний, необходима тщательная подготовка события. На помощь спешит кавер группа на праздник в Москве "Дуэт ID". Наша оригинальная программа включает в себя разноплановый и даже разножанровый репертуар: от кавер-версий хитов зарубежной и русской поп-музыки, произведений в жанре кросс-овер до лучших номеров из опер и мюзиклов. Мы поможем сделать Ваше событие идеальным.
 					</p>
+					<span>
+						Спешите отправить заявку сейчас, чтобы получить индивидуальную скидку при заказе с сайта!
+					</span>
 				</div>
 
 				<div class="col-2 form wow slideInRight container1">
