--- a/corporativ.html
+++ b/corporativ.html
@@ -83,7 +83,7 @@
 		</div>
 		<div class="slide">
 			<h1>Дуэт ID</h1>
-			<h3>Музыкальный, яркий, зажигательный дуэт на ваши мероприятия в Москве и МО.</h3>
+			<h3>Музыкальный, яркий, зажигательный дуэт на Ваши мероприятия в Москве и МО.</h3>
 			<a class="btn" id="callMeBack" href="#">Заказать звонок</a>
 		</div>
 		<div class = "white left"></div>
@@ -99,17 +99,17 @@
 				c5.552-5.564,12.834-8.34,20.116-8.34c7.27,0,14.552,2.776,20.105,8.34l139.514,139.514l139.196-139.196
 				c5.564-5.552,12.834-8.34,20.116-8.34c7.27,0,14.552,2.788,20.105,8.34c11.116,11.105,11.116,29.104,0,40.22L228.294-151.753z"/></g></g></g></svg>
 
-			<legend>Заполните форму и мы свяжемся с вами в ближайшее время</legend>
+			<legend>Заполните форму и мы свяжемся с Вами в ближайшее время</legend>
 			<div class="input_style"><label>Ваше имя:</label><input type="text" name="name" placeholder="Иван" pattern="[а-яА-Я -]{1,40}" required></div>
 			<div class="input_style"><label>Ваш телефон:</label><input type="text" id="phone" name="phone" placeholder="(495) 000-0000" required></div>
 			<input type="submit" name="send" value="Отправить">
-			<p>Нажимая на кнопку, вы даете согласие на обработку <a href="#">персональных данных</a></p>
+			<p>Нажимая на кнопку, Вы даете согласие на обработку <a href="#">персональных данных</a></p>
 		</form>
 	</div>
 		<article class="service">
 			<div class="container">
 				<h2>Хотите музыкальную группу на корпоратив? Кавер группа «Дуэт ID» - лучший выбор!</h2>
-				<p>В жизни каждой компании есть место для праздника. Именно в эти дни коллектив наполняется жизненной энергией и задором, которые так необходимы во время трудовых будней. Но как обеспечить корпоративное мероприятие гарантированным успехом и вдохнуть жизнь даже в самых усталых работников? На выручку спешит музыкальная группа Дуэт ID, идеально подходящая для таких мероприятий! Кавер группа на корпоратив подарит вам море впечатлений, зажигательные мотивы и расслабляющие мелодии! <br><br>
+				<p>В жизни каждой компании есть место для праздника. Именно в эти дни коллектив наполняется жизненной энергией и задором, которые так необходимы во время трудовых будней. Но как обеспечить корпоративное мероприятие гарантированным успехом и вдохнуть жизнь даже в самых усталых работников? На выручку спешит музыкальная группа Дуэт ID, идеально подходящая для таких мероприятий! Кавер группа на корпоратив подарит Вам море впечатлений, зажигательные мотивы и расслабляющие мелодии! <br><br>
 				<span>Дуэт ID – это кавер группа на корпоратив в Москве, которая готова отвечать за веселье и радость для всех присутствующих!</span>
 				</p>
 				<h3>Почему мы?</h3>
@@ -117,7 +117,7 @@
 				<ul>
 					<li>Привезем с собой высококачественную аппаратуру при необходимости</li>
 					<li>Свободно выступаем в разных жанрах</li>
-					<li>Готовы сформировать плейлист выступления под ваши пожелания и тематику</li>
+					<li>Готовы сформировать плейлист выступления под Ваши пожелания и тематику</li>
 					<li>Отличительно низкая цена за превосходное качество</li>
 					<li>Оба вокалиста имеют за плечами многолетний опыт</li>
 					<li>Лёгкая и непринуждённая работа «на публику», превосходящая других ведущих</li>
@@ -145,8 +145,11 @@
 					<h2>Заполните форму</h2>
 					<h3>и получите персональную скидку</h3>
 					<p>
-						Для того, чтобы любой праздник переполнился красками и оставил за собой шлейф из воспоминаний, необходима тщательная подготовка события. На помощь спешит кавер группа на праздник в Москве "Дуэт ID". Наша оригинальная программа включает в себя разноплановый и даже разножанровый репертуар: От лучших номеров из опер и мюзиклов, произведений в жанре "кросс-овер" до кавер-версий хитов зарубежной и российской поп-музыки. Мы поможем сделать ваше событие идеальным.<br><br><span id="upper"> Спешите отправить заявку сейчас, чтобы получить индивидуальную скидку при заказе с сайта!</span>
+						Для того, чтобы любой праздник переполнился красками и оставил за собой шлейф из воспоминаний, необходима тщательная подготовка события. На помощь спешит кавер группа на праздник в Москве "Дуэт ID". Наша оригинальная программа включает в себя разноплановый и даже разножанровый репертуар: от кавер-версий хитов зарубежной и русской поп-музыки, произведений в жанре кросс-овер до лучших номеров из опер и мюзиклов. Мы поможем сделать ваше событие идеальным.
 					</p>
+					<span>
+						Спешите отправить заявку сейчас, чтобы получить индивидуальную скидку при заказе с сайта!
+					</span>
 				</div>
 
 				<div class="col-2 form wow slideInRight container1">
