--- a/party.html
+++ b/party.html
@@ -83,7 +83,7 @@
 		</div>
 		<div class="slide">
 			<h1>Дуэт ID</h1>
-			<h3>Музыкальный, яркий, зажигательный дуэт на ваши мероприятия в Москве и МО.</h3>
+			<h3>Музыкальный, яркий, зажигательный дуэт на Ваши мероприятия в Москве и МО.</h3>
 			<a class="btn" id="callMeBack" href="#">Заказать звонок</a>
 		</div>
 		<div class = "white left"></div>
@@ -99,33 +99,33 @@
 				c5.552-5.564,12.834-8.34,20.116-8.34c7.27,0,14.552,2.776,20.105,8.34l139.514,139.514l139.196-139.196
 				c5.564-5.552,12.834-8.34,20.116-8.34c7.27,0,14.552,2.788,20.105,8.34c11.116,11.105,11.116,29.104,0,40.22L228.294-151.753z"/></g></g></g></svg>
 
-			<legend>Заполните форму и мы свяжемся с вами в ближайшее время</legend>
+			<legend>Заполните форму и мы свяжемся с Вами в ближайшее время</legend>
 			<div class="input_style"><label>Ваше имя:</label><input type="text" name="name" placeholder="Иван" pattern="[а-яА-Я -]{1,40}" required></div>
 			<div class="input_style"><label>Ваш телефон:</label><input type="text" id="phone" name="phone" placeholder="(495) 000-0000" required></div>
 			<input type="submit" name="send" value="Отправить">
-			<p>Нажимая на кнопку, вы даете согласие на обработку <a href="#">персональных данных</a></p>
+			<p>Нажимая на кнопку, Вы даете согласие на обработку <a href="#">персональных данных</a></p>
 		</form>
 	</div>
 		<article class="service">
 			<div class="container">
 				<h2>«Дуэт ID»  - лучшая кавер группа на праздник, торжество и фестиваль в Москве и МО!</h2>
 				<p>Любой праздник – это чистые неподдельные эмоции. Люди собираются в честь того или иного события, в компаниях от двух до тысяч человек, чтобы разделить памятное событие. Для того, чтобы праздник стал поистине веселым и памятным для всех, необходимо заказать кавер группу на праздник, цена которой будет измерима улыбками на лицах и горящими глазами! <br><br>
-				<span>Подарить вам незабываемое выступление кавер группы на праздник - именно с этой мотивацией дуэт ID выходит на сцену!</span>
+				<span>Подарить Вам незабываемое выступление кавер группы на праздник - именно с этой мотивацией Дуэт ID выходит на сцену!</span>
 				</p>
 				<h3>Почему мы?</h3>
-				<p>Кавер группа «Дуэт ID» - это высококлассные исполнители российской и зарубежной музыки, ставящие для себя приоритетом ВАШ праздник и ВАШИ желание.</p>
+				<p>Кавер группа «Дуэт ID» - это высококлассные исполнители российской и зарубежной музыки, ставящие для себя приоритетом ВАШ праздник и ВАШИ желания.</p>
 				<ul>
 					<li>Профессиональное выступление на любую аудиторию</li>
 					<li>Музыканты привезут собственную аппаратуру (уточняйте по телефону)</li>
 					<li>Выступление в любых стилях, а также собственный жанр «кроссовер»</li>
-					<li>Подбор песен под ваш вкус и тематику</li>
+					<li>Подбор песен под Ваш вкус и тематику</li>
 					<li>Оба вокалиста имеют профессиональное образование, закончили академию им.Гнесиных</li>
 					<li>Отличительно низкая цена за превосходное качество</li>
 					<li>Слаженная, многолетняя работа вокалистов</li>
 					<li>Лёгкая и непринуждённая работа «на публику», превосходящая других ведущих</li>
 				</ul>
 				<h3>Кавер группа на праздник - почему стоит заказать прямо сейчас? Что особенного в дуэте ID?</h3>
-				<p>Дуэт ID – уникальная кавер группа, выступающая в жанре кроссовер. Неповторимая «фишка» дуэта - живое исполнение сложнейших треков со вставками оперного пения! За плечами вокалистов многолетний опыт, позволяющий с легкостью совмещать современное звучания с классической музыкой и академическим вокалом. На вашем мероприятии могут быть исполнены стильные, современные песни в новом звучании! Искусство придёт на ваш праздник!<br><br>
+				<p>Дуэт ID – уникальная кавер группа, выступающая в жанре кроссовер. Неповторимая «фишка» дуэта - живое исполнение сложнейших треков со вставками оперного пения! За плечами вокалистов многолетний опыт, позволяющий с легкостью совмещать современное звучание с классической музыкой и академическим вокалом. На Вашем мероприятии могут быть исполнены стильные, современные песни в новом решении! Искусство придёт на Ваш праздник!<br><br>
 				<span>Приблизьтесь к прекрасному, закажите кавер группу «Дуэт ID» на праздник!</span>
 				</p>
 			</div>
@@ -146,8 +146,11 @@
 					<h2>Заполните форму</h2>
 					<h3>и получите персональную скидку</h3>
 					<p>
-						Для того, чтобы любой праздник переполнился красками и оставил за собой шлейф из воспоминаний, необходима тщательная подготовка события. На помощь спешит кавер группа на праздник в Москве "Дуэт ID". Наша оригинальная программа включает в себя разноплановый и даже разножанровый репертуар: От лучших номеров из опер и мюзиклов, произведений в жанре "кросс-овер" до кавер-версий хитов зарубежной и российской поп-музыки. Мы поможем сделать ваше событие идеальным.<br><br><span id="upper"> Спешите отправить заявку сейчас, чтобы получить индивидуальную скидку при заказе с сайта!</span>
+						Для того, чтобы любой праздник переполнился красками и оставил за собой шлейф из воспоминаний, необходима тщательная подготовка события. На помощь спешит кавер группа на праздник в Москве "Дуэт ID". Наша оригинальная программа включает в себя разноплановый и даже разножанровый репертуар: от кавер-версий хитов зарубежной и русской поп-музыки, произведений в жанре кросс-овер до лучших номеров из опер и мюзиклов. Мы поможем сделать Ваше событие идеальным.
 					</p>
+					<span>
+						Спешите отправить заявку сейчас, чтобы получить индивидуальную скидку при заказе с сайта!
+					</span>
 				</div>
 
 				<div class="col-2 form wow slideInRight container1">
