--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 
 		<div class="video">
 			<video autoplay muted loop id="videoBg" poster="img/poster.jpg">
-				<source src="video.webm" type="video/webm">
-				<source src="video.mp4" type="video/mp4">
+				<!-- <source src="video.webm" type="video/webm"> -->
+				<!-- <source src="video.mp4" type="video/mp4"> -->
 			</video>
 		</div>
 		<div class="slide">
